# libc8

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  README_8md.html  annotated.html  annotated_dup.js  chip8_8c.html  chip8_8c.js  chip8_8h.html  chip8_8h.js  chip8_8h_source.html  chip8_8md.html  chip8as_8md.html  chip8dis_8md.html  classes.html  common_8h.html  common_8h.js  common_8h_source.html  debug_8c.html  debug_8c.js  debug_8h.html  debug_8h.js  debug_8h_source.html  decode_8c.html  decode_8c.js  decode_8h.html  decode_8h_source.html  defs_8h.html  defs_8h_source.html  dir_0e2067852636b25dade0174c3c60846e.html  dir_0e2067852636b25dade0174c3c60846e.js  dir_286a2a332f712c7d762d05e30907e6c3.html  dir_286a2a332f712c7d762d05e30907e6c3.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  encode_8c.html  encode_8c.js  (+123 more)
.github/workflows/: clang-format.yml  cmake-single-platform.yml  doxygen.yml
doc/: chip8as.md
docs/: chip8.md  chip8as.md  chip8dis.md
docs/man/: CMakeLists.txt  chip8.1  chip8as.1
docs/man/man1/: chip8.1  chip8dis.1
libc8/c8/: chip8.c  decode.c  decode.h  encode.c  font.h  graphics.c  graphics.h
libc8/c8/private/: debug.c  exception.c  exception.h  graphics_sdl2.c  instruction.c  instruction.h  symbol.c  symbol.h  util.c  util.h
pkg/: PKGBUILD
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_d.js  enums_0.js  (+45 more)
src/: CMakeLists.txt
src/c8/: chip8.c  chip8.h  common.h  decode.c  decode.h  defs.h  encode.c  encode.h  font.c  font.h  graphics.c  graphics.h
src/c8/private/: debug.c  debug.h  exception.c  exception.h  graphics_ncurses.c  graphics_sdl2.c  instruction.c  instruction.h  symbol.c  symbol.h  util.c  util.h
test/: CMakeLists.txt  test_chip8.c  test_debug.c  test_debug.h  test_debug_linux.c  test_decode.c  test_encode.c  test_encode_decode.c  test_exception.c  test_font.c  test_font_linux.c  test_graphics.c  test_instruction.c  test_symbol.c  test_util.c  util.c
test/data/: 1dcell_dis.txt  1dcell_dis_a.txt  1dcell_dis_al.txt  1dcell_dis_l.txt  bigrom.ch8  colors-invalid.txt  colors.txt
tools/: CMakeLists.txt  chip8.c  chip8as.c  chip8dis.c
